zebra-state/src/service/finalized_state/disk_format/tests/snapshots/block_data_raw_data@mainnet_1.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "000001",
    v: "24f40000000000000000000000000000000000000000000000000000000000000000000000000000",
  ),
]
