zebra-state/src/service/finalized_state/disk_format/tests/snapshots/block_data_raw_data@testnet_1.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "000000",
    v: "000000000000000000000000000000000000000000000000000000000000000000000000000000009c060000",
  ),
  KV(
    k: "000001",
    v: "24f4000000000000000000000000000000000000000000000000000000000000000000000000000052060000",
  ),
]
